@@ -12,8 +12,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @Slf4j
@@ -23,26 +22,25 @@ public class ProductService {
     private final ProductRepository productRepository;
     private final ModelMapper modelMapper;
 
+
     public List<ProductDto> getAllInventory()
     {
-        log.info("fetching all inventory items: ");
+        log.info("Fetching all inventory Items");
         List<Product> inventories=productRepository.findAll();
-
-         return inventories.stream()
+        return inventories.stream()
                 .map(product -> modelMapper.map(product, ProductDto.class))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     public ProductDto getProductById(Long id)
     {
-        log.info("fetching product with id {}",id);
-        Product product=productRepository
-                .findById(id)
-                .orElseThrow(()->new NoSuchElementException("product with id not found"));
-
-        return modelMapper.map(product, ProductDto.class);
+        log.info("fetching product with id: {}",id);
+        Optional<Product> inventory=productRepository.findById(id);
+        return inventory.map(item->modelMapper.map(item, ProductDto.class))
+                .orElseThrow(()->new RuntimeException("Inventory Not found"));
     }
+
 
     @Transactional
     public Double reduceStocks(OrderRequestDto orderRequestDto) {
@@ -52,19 +50,22 @@ public class ProductService {
         for (OrderRequestItemDto orderRequestItemDto:orderRequestDto.getItems())
         {
             Long productId= orderRequestItemDto.getProductId();
-            Integer quantity=orderRequestItemDto.getQuantity();
+            Integer quantity= orderRequestItemDto.getQuantity();
 
-          Product product=productRepository.findById(productId).orElseThrow(()->new RuntimeException("product not found with id"+productId));
 
-           if(product.getStock()<quantity)
-           {
-               throw new RuntimeException("product cannot be fulfilled for the given quantity:");
-           }
+            Product product=productRepository
+                    .findById(productId)
+                    .orElseThrow(()->new RuntimeException("product not found with id {}"+productId));
 
-           product.setStock(product.getStock()-quantity);
-           productRepository.save(product);
-           totalPrice+=quantity*product.getPrice();
+            if (product.getStock()<quantity)
+            {
+                throw new RuntimeException("product cannot be fulfilled with given quantity");
+            }
 
+            product.setStock(product.getStock()-quantity);
+            productRepository.save(product);
+
+            totalPrice+=quantity*product.getPrice();
 
         }
         return totalPrice;
